--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=5050
 DB_NAME=AudioSBM
 DB_USER=postgres
 DB_PASSWORD=Xyilo2004
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=5432
 
 SECRET_KEY=diplomDenis
