your_commit_message

--- a/.env
+++ b/.env
@@ -1,9 +1,19 @@
 PORT=5050
 
 DB_NAME=AudioSBM
-DB_USER=postgres
-DB_PASSWORD=Xyilo2004
-DB_HOST=localhost
+DB_USER=Designersss
+DB_PASSWORD=6RCSiEzl2hyk
+DB_HOST=ep-calm-thunder-435915.us-east-2.aws.neon.tech
 DB_PORT=5432
 
 SECRET_KEY=diplomDenis
+
+
+
+
+PGHOST='ep-calm-thunder-435915.us-east-2.aws.neon.tech'
+PGDATABASE='neondb'
+PGUSER='Designersss'
+PGPASSWORD='6RCSiEzl2hyk'
+ENDPOINT_ID='AudioSBM'
+
