--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "postgres": "^3.3.5",
     "sequelize": "^6.25.8",
     "uuid": "^9.0.0"
   },
